// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user get reducer should handle GET_STUDENTS 1`] = `
Object {
  "students": undefined,
}
`;

exports[`user get reducer should return the initialState 1`] = `
Object {
  "students": Array [],
}
`;
